--- a/THANKS
+++ b/THANKS
@@ -9,9 +9,9 @@ a list of these people. Help me keep it complete and exempt of errors.
 Version 0.11 Beta
 
 - nocturnal-devil <sheharzad_arshad@hotmail.com>
-      Aportar con los fondos de pantalla
+      - for give me permission to use his images (background, figures, etc.) 
 
-- A los diferentes beta testers:
+- To all beta testers:
       - Dany <supply_connany@hotmail.cl>
       - Hasbun <sergtier@hotmail.com>
       - Kamon <kamonn@gmail.com>
